<resources>
    <string name="app_name">Habitude</string>
    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Habitude - Develop the right attitude for your habits</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="sign_in_description_text">Enter your email id and password to sign in .</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="profile_profile">My Profile</string>
    <string name="profile_save">Save</string>
    <string name="profile_change_forgot_password">Change / Forgot Password?</string>
    <string name="profile_email">Email</string>
    <string name="profile_name">Name</string>
    <string name="profile_logout">Logout</string>
    <string name="profile_edit">Edit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_habit">Add</string>
    <string name="save_habit">Save</string>
    <string name="delete_habit">Delete</string>

</resources>