<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.habits.ProfileFragment"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/profile_profile"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_user"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/test_image"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_edit"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/settings_items_background"
            android:backgroundTint="#5E85F9"
            android:src="@drawable/ic_edit"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/civ_user"
            app:layout_constraintEnd_toEndOf="@id/civ_user" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/profile_name"
            android:singleLine="true"
            android:visibility="invisible"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/civ_user" />

        <EditText
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/profile_name"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/civ_user" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_white_background"
            android:enabled="false"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/profile_email"
            android:singleLine="true"
            android:textColor="@color/g_hint"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/et_name" />

        <TextView
            android:id="@+id/tv_update_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/profile_change_forgot_password"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_edit_profile"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/poppins_light"
            android:text="@string/profile_edit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/tv_update_password"
            android:layout_marginBottom="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save_profile"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/poppins_light"
            android:text="@string/profile_save"
            android:visibility="gone"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/tv_update_password"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:id="@+id/ll_log_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_logout"
                android:layout_gravity="center_vertical"
                android:background="@drawable/settings_items_background"
                app:tint="@color/white"
                />

            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/profile_logout"
                android:textColor="@color/g_hint"
                android:textStyle="bold" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/g_hint"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btn_edit_profile"
            app:layout_constraintEnd_toEndOf="@+id/btn_edit_profile"
            app:layout_constraintStart_toStartOf="@+id/btn_edit_profile"
            app:layout_constraintTop_toTopOf="@+id/btn_edit_profile" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>